src/test/deca/test_compilateur/context/valid/created/miscellaneous/return_float_int.deca
// Description :
//    return mauvais type : float, demandé int
//
// Resultats :
//		Ok

class A{
float met(){
return 1;
}
}